# RepoRover

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  app.py  manage.py  pyproject.toml  requirements.txt  test.ipynb
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
docs/: PRD.md
engine/: errors.py  github_comments.py  services.py  slash.py  tasks.py  tests.py
reporover/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
src/: agents.py  github_tools.py  graph.py  main.py  state.py  test_loop.py  utils.py
templates/tenancy/: base.html  dashboard.html  org_keys.html  repo_settings.html
tenancy/: admin.py  crypto.py  forms.py  github_oauth.py  models.py  tests.py  urls.py  views.py
tenancy/migrations/: 0001_initial.py  0002_remove_organizationconfig_encrypted_gemini_key_and_more.py  0003_remove_reviewsession_tenancy_rev_repo_se_94d296_idx_and_more.py
webhooks/: tests.py  urls.py  views.py
