[project]
name = "reporover"
version = "0.1.0"
description = "Centralized AI code review platform — multi-tenant Django SaaS GitHub App"
requires-python = ">=3.10"
dependencies = [
    # --- Web / SaaS layer ---
    "django>=5,<6",
    "celery>=5",
    "redis>=4",
    "psycopg[binary]>=3",

    # --- Agent orchestration core ---
    "langgraph>=1.0,<2",
    "langgraph-checkpoint-postgres>=2.0,<3.0",
    "langchain-google-genai>=3",
    "e2b-code-interpreter==1.0.3",
    "PyGithub>=2",
    "pydantic>=2",

    # --- Crypto / config ---
    "cryptography>=40",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
]

[tool.uv]
# uv creates and manages the virtual environment at .venv by default.
# Run `uv sync` to install all dependencies into the venv.
# Run `uv sync --extra dev` to also install dev deps.

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "reporover.settings"
python_files = ["tests.py", "test_*.py"]
